--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test:karma:server": "node bin/ssl_hotfix.js cross-env karma start karma.conf.cjs",
     "start": "node ./sandbox/server.js",
     "preversion": "gulp version && npm test",
-    "version": "npm run build && git add dist && git add package.json",
+    "version": "npm run build && git add package.json",
     "prepublishOnly": "npm test",
     "postpublish": "git push && git push --tags",
     "build": "gulp clear && cross-env NODE_ENV=production rollup -c -m",
